--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -194,10 +194,6 @@ a, a:focus, a:hover
     background: $white
 
 
-.pendencies-content .core-subjects-options li 
-    background: $default-white
-
-
 .category-header i 
     color: white
 
@@ -628,6 +624,8 @@ a.add-row
 .suggestions 
     background: $white
 
+.subject-related-panel
+    background: #F5F5F5 !important 
 
 .mural-ungeneral
     background: #EEE
