--- a/mural/templates/mural/subject_view.html
+++ b/mural/templates/mural/subject_view.html
@@ -24,7 +24,7 @@
             <div class="row">
                 <div class="col-md-12 category-header">
                     <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
-                        <span>{{subject.name}}</span>
+                        <span>{{subject.name}} / {% trans 'Mural' %}</span>
                     </h4>
 
                     <div class="col-md-5 pull-right category-card-items">
@@ -41,16 +41,11 @@
                                 <li><a href="javascript:delete_subject.get('{% url 'subjects:delete' subject.slug %}?view=index','#subject','#modal_subject')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
                             </ul>
                         {% endif %}
-                        
-                        <a href="{% url 'mural:subject_view' subject.slug %}" class="pull-right action_icon">
-                            <i class="fa fa-list" aria-hidden="true"></i>
-                            {% mural_number subject request.user %}
-                        </a>
                     </div>
                 </div>
             </div>
         </div>
-        <div id="{{subject.slug}}" class="panel-collapse panel-body in collapse mural-ungeneral">
+        <div id="{{subject.slug}}" class="panel-collapse panel-body in collapse mural-ungeneral subject-related-panel">
         	<div class="col-md-12 cards-content mural" data-url="{% url 'mural:subject_view' subject.slug %}" data-pages="{{ paginator.num_pages }}" data-page="{{ page_obj.number }}" data-fav="{{ favorites }}" data-mine="{{ mines }}">
 		    	<div class="col-md-9 col-sm-9 col-xs-9 mural-list">
 		    		<div class="post_make panel panel-default">
