--- a/reports/templates/reports/create.html
+++ b/reports/templates/reports/create.html
@@ -8,7 +8,7 @@
     {{ block.super }}
     {% breadcrumb subject.category 'subjects:cat_view' subject.category.slug %}
     {% breadcrumb subject 'subjects:view' subject.slug %}
-    {% breadcrumb 'analytics' '' %}
+    {% breadcrumb 'Analytics' '' %}
 {% endblock %}
 
 {% block javascript %}
@@ -20,33 +20,33 @@
 {% block content %}
 	
 	<div class="panel panel-info topic-panel">
-            <div class="panel-heading"  id="analytics-panel">
-            	<div class="row">
-                    <div class="col-md-12 category-header">
-                        <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
-                            <span>{% trans "Analytics" %}</span>
-                        </h4>
-                    </div>
+        <div class="panel-heading"  id="analytics-panel">
+        	<div class="row">
+                <div class="col-md-12 category-header">
+                    <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
+                        <span>{{ subject }} / {% trans "Analytics" %}</span>
+                    </h4>
                 </div>
             </div>
+        </div>
+        <div id="{{ subject.slug }}" class="panel-collapse panel-body in collapse subject-related-panel">
+            <div id="core-subjects-options-div">
+                <ul class="core-subjects-options report-menu-choice">
+                	<li class="active">
+                		{% trans "Interaction Data" %}
+                	</li>
+                	<li>
+                		{% trans "Report Card" %}
+                	</li>
+                	<li>
+                		{% trans "Participation" %}
+                	</li>
+                </ul>
+            </div>
+            {% include "reports/_form.html" %}
+        </div>
     </div>
-
-    <div id="core-subjects-options-div">
-        <ul class="core-subjects-options report-menu-choice">
-        	<li class="active">
-        		{% trans "Interaction Data" %}
-        	</li>
-        	<li>
-        		{% trans "Report Card" %}
-        	</li>
-        	<li>
-        		{% trans "Participation" %}
-        	</li>
-        </ul>
-    </div>
-
-    {% include "reports/_form.html" %}
-	
+    
     <script type="text/javascript" src="{% static "reports/js/report.js" %}"></script>
 	<script>
 
