--- a/subjects/templates/subjects/home.html
+++ b/subjects/templates/subjects/home.html
@@ -4,52 +4,46 @@
 
 {% block content %}
 	{% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <p>{{ message }}</p>
-            </div>
-        {% endfor %}
-    {% endif %}
+		{% for message in messages %}
+			<div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				<p>{{ message }}</p>
+			</div>
+		{% endfor %}
+	{% endif %}
 
 
 
 
   <!-- Wrapper for slides -->
-    <div id="myCarousel" class="carousel slide " data-ride="carousel">
+	<div id="myCarousel" class="carousel slide " data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-    <li data-target="#myCarousel" data-slide-to="3"></li>
+	<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+	<li data-target="#myCarousel" data-slide-to="1"></li>
+	<li data-target="#myCarousel" data-slide-to="2"></li>
+	<li data-target="#myCarousel" data-slide-to="3"></li>
   </ol>
 
 <div class="carousel-inner" role="listbox">
 		{% for new in news %}
-        {% if forloop.first %}
-            <div class="item active" style="text-align:center">
-                 <span><a href="{% url 'news:view' new.slug %}"> <img src="{{ new.image.url }}" alt="Image"> </a></span>
-            </div>
-        {% else %}
-            <div class="item" style="text-align:center">
-                 <span><a href="{% url 'news:view' new.slug %}"> <img src="{{ new.image.url }}" alt="Image"> </a></span>
-            </div>
-        {% endif%}
+			<div class="item {% if forloop.first %}active{% endif %}" style="text-align:center">
+				 <span><a href="{% url 'news:view' new.slug %}"> <img src="{% if new.image %}{{ new.image.url }}{% endif %}" alt="Image"> </a></span>
+			</div>
 		{% endfor %}
 
 </div>
 
   <!-- Left and right controls -->
   <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
+	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+	<span class="sr-only">Previous</span>
   </a>
   <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
+	<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+	<span class="sr-only">Next</span>
   </a>
 </div>
 
@@ -62,7 +56,7 @@
 		<h2 class=" my-subjects-title"><b><i>{% trans "My Subjects" %} ({{ total_subs }})</i></b></h2>
 
 		{% if subjects|length > 0 %}
-	    	<div class="panel-group" id="subject-accordion" role="tablist" aria-multiselectable="true">
+			<div class="panel-group" id="subject-accordion" role="tablist" aria-multiselectable="true">
 				{% for subject in subjects %}
 					{% include "subjects/subject_card.html" with accordion_id="subject-accordion" %}
 				{% endfor %}
