--- a/amadeus/static/css/themes/black.sass
+++ b/amadeus/static/css/themes/black.sass
@@ -739,7 +739,17 @@ a.add-row
 .btn:not(.btn-raised):not(.btn-link):focus, .btn:not(.btn-raised):not(.btn-link):hover, .input-group-btn .btn:not(.btn-raised):not(.btn-link):focus, .input-group-btn .btn:not(.btn-raised):not(.btn-link):hover 
     background-color: initial
 
+#participants, .participants-list
+    background-color: $white
 
+#participants
+    box-shadow: -1px 1px 8px #000000
+
+#participants i
+    color: #000000
+
+.participants-list
+    box-shadow: -1px 2px 1px #000000
 
 @media(max-width: 768px) 
     .navbar .navbar-nav .dropdown .dropdown-menu li > a 
