--- a/amadeus/static/css/themes/red.sass
+++ b/amadeus/static/css/themes/red.sass
@@ -738,7 +738,17 @@ a.add-row
 .btn:not(.btn-raised):not(.btn-link):focus, .btn:not(.btn-raised):not(.btn-link):hover, .input-group-btn .btn:not(.btn-raised):not(.btn-link):focus, .input-group-btn .btn:not(.btn-raised):not(.btn-link):hover 
     background-color: initial
 
+#participants, .participants-list
+    background-color: $white
 
+#participants
+    box-shadow: -1px 1px 8px $primary-color
+
+#participants i
+    color: $primary-color
+
+.participants-list
+    box-shadow: -1px 2px 1px $primary-color
 
 @media(max-width: 768px) 
     .navbar .navbar-nav .dropdown .dropdown-menu li > a 
