--- a/mural/templates/mural/resource_view.html
+++ b/mural/templates/mural/resource_view.html
@@ -26,19 +26,12 @@
         		<div class="row">
                     <div class="col-md-12 category-header">
                         <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
-                            <span>{{ resource }}</span>
+                            <span>{{ resource }} / {% trans 'Mural' %}</span>
                         </h4>
-
-                        <div class="col-md-5 pull-right category-card-items">
-                            <a href="{% url 'mural:resource_view' resource.slug %}" class="pull-right action_icon">
-                                <i class="fa fa-list" aria-hidden="true"></i>
-                                {% resource_mural_number resource request.user %}
-                            </a>
-                        </div>
                     </div>
                 </div>
             </div>
-            <div id="{{subject.slug}}" class="panel-collapse panel-body in collapse mural-ungeneral">
+            <div id="{{subject.slug}}" class="panel-collapse panel-body in collapse mural-ungeneral subject-related-panel">
             	<div class="col-md-12 cards-content mural" data-url="{% url 'mural:resource_view' resource.slug %}" data-pages="{{ paginator.num_pages }}" data-page="{{ page_obj.number }}" data-fav="{{ favorites }}" data-mine="{{ mines }}">
 			    	<div class="col-md-9 col-sm-9 col-xs-9 mural-list">
 			    		<div class="post_make panel panel-default">
@@ -64,7 +57,7 @@
 			                    <span class="fa fa-spin fa-circle-o-notch"></span>
 			                </center>
 			            </div>
-						<div class="text-center no-subjects" {% if posts.count > 0 %} style="display:none" {% endif %}>
+						<div class="text-center no-subjects" style="margin-top:10px;{% if posts.count > 0 %}display:none{% endif %}">
 			                <i class="fa fa-list"></i>
 			                <h4>{% trans 'There are no posts in this mural yet.' %}</h4>
 			            </div>
