--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -133,7 +133,7 @@ a, a:focus, a:hover {
   color: #F5F5F5; }
 
 .pendencies-content {
-  background: #FFFFFF; }
+  background: #F5F5F5; }
 
 .category-header i {
   color: white; }
