--- a/mural/templates/mural/subject_view.html
+++ b/mural/templates/mural/subject_view.html
@@ -61,7 +61,7 @@
 			    		</div>
 		    		</div>
 
-		    		<div class="posts">
+		    		<div class="posts" style="margin-top: 10px">
 		                {% for post in posts %}
 		                    {% include 'mural/_view.html' %}
 		                {% endfor %}
