--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1616,6 +1616,10 @@ div.dataTables_wrapper div.dataTables_paginate {
     margin-bottom: 0px;
 }
 
+.subject-related-panel .posts .panel {
+    margin-bottom: 10px;
+}
+
 @-moz-document url-prefix() {
     .talk_body .checkbox input[type="checkbox"] {
         display: none;
