--- a/amadeus/static/bootstrap-3.3.7/css/bootstrap.css
+++ b/amadeus/static/bootstrap-3.3.7/css/bootstrap.css
@@ -6417,16 +6417,25 @@ button.close {
   background-color: #d6d6d6;
 }
 .carousel-caption {
+  font-size: 25px;
+  font-family:Roboto;
+  font-style: italic;
+  font-weight: 400;
+  padding-right: 30px;
+  padding-left: 30px;
+  background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgba(255,255, 255, 1));
+  background: -moz-linear-gradient(left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+  width: 100%;
   position: absolute;
   right: 15%;
-  bottom: 20px;
+  bottom: 10px;
   left: 15%;
   z-index: 10;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+  text-align: right;
+  text-shadow: 0 1px 5px rgba(255, 255, 255, 1);
 }
 .carousel-caption .btn {
   text-shadow: none;
@@ -6450,9 +6459,9 @@ button.close {
     margin-right: -10px;
   }
   .carousel-caption {
-    right: 20%;
-    left: 20%;
-    padding-bottom: 30px;
+    right: 0%;
+    left: 0%;
+    padding-bottom: 0px;
   }
   .carousel-indicators {
     bottom: -30px;
