--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -79,7 +79,7 @@
                             <div class="col-sm-offset-1 col-md-10 col-lg-10 col-sm-10 col-xs-12">
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right forgotPassword">
                                     <a class="pull-right" href="{% url 'users:forgot_pass' %}">{% trans 'Forgot your password?' %}</a>
-                                    <li class="dropdown language-selector pull-right ">
+                                    <li class="dropdown language-selector pull-right " style="margin-top:1px;">
                                         {% get_current_language as LANGUAGE_CODE %}
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-close-others="true">
 
@@ -113,7 +113,7 @@
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center forgotPassword">
                                     <a href="{% url 'users:forgot_pass' %}">{% trans 'Forgot your password?' %}</a>
 
-                                    <li class="dropdown language-selector pull-right ">
+                                    <li class="dropdown language-selector pull-right " style="margin-top:1px;">
                                         {% get_current_language as LANGUAGE_CODE %}
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-close-others="true">
 
