--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -79,15 +79,15 @@
                             <div class="col-sm-offset-1 col-md-10 col-lg-10 col-sm-10 col-xs-12">
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right forgotPassword">
                                     <a class="pull-right" href="{% url 'users:forgot_pass' %}">{% trans 'Forgot your password?' %}</a>
-                                    <li class="dropdown language-selector pull-right " style="margin-top:1px;">
+                                    <li class="dropdown language-selector pull-right " style="margin-top:1px;margin-right:10px;">
                                         {% get_current_language as LANGUAGE_CODE %}
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-close-others="true">
 
 
-                                           <span>[{{LANGUAGE_CODE}}]  </span>
+                                           <span >[{{LANGUAGE_CODE}}]  </span>
 
                                         </a>
-                                        <i class="glyphicon glyphicon-adjust"></i>
+                                        <a href="{% url 'themes:contrast'%}" style="margin-left:10px;"><i class="glyphicon glyphicon-adjust"></i></a>
                                         <ul class="dropdown-menu">
 
 
@@ -113,14 +113,14 @@
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center forgotPassword">
                                     <a href="{% url 'users:forgot_pass' %}">{% trans 'Forgot your password?' %}</a>
 
-                                    <li class="dropdown language-selector pull-right " style="margin-top:1px;">
+                                    <li class="dropdown language-selector pull-right " style="margin-top:1px;margin-right:10px;">
                                         {% get_current_language as LANGUAGE_CODE %}
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-close-others="true">
 
                                           <span>[{{LANGUAGE_CODE}}]  </span>
 
                                         </a>
-                                        <i class="glyphicon glyphicon-adjust"></i>
+                                        <a href="{% url 'themes:contrast'%}" style="margin-left:10px;"><i class="glyphicon glyphicon-adjust"></i></a>
                                         <ul class="dropdown-menu">
                                             {% get_available_languages as LANGUAGES %}
                                             {% get_language_info_list for LANGUAGES as languages %}
