Css template modified to not render contrast stuff

--- a/themes/templates/themes/css_update.html
+++ b/themes/templates/themes/css_update.html
@@ -29,6 +29,10 @@
 							<br clear="all" />
 
 							{% for radio in field %}
+                    {% if radio.choice_value == 'contrast' %}
+
+                    {% else %}
+
 							    <label for="{{ radio.id_for_label }}" class="row text-center">
 						    		<div class="col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-lg-2 col-md-2 col-sm-2 col-xs-3 text-left">
 								        <span class="radio">
@@ -47,6 +51,8 @@
 							        </div>
 							    </label>
 							    <br clear="all" />
+                  {% endif %}
+
 							{% endfor %}
 						</div>
 
