--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -705,6 +705,16 @@ a.add-row
 #analytics-panel
     background-color: #0277BD !important
 
+.backup_container .more_items
+    background: $primary-color
+    color: $white
+
+.backup_container .backup_item label, .backup_container .resources_list label
+    color: #333333
+
+.semi-check
+    border-color: $primary-color !important
+
 @media(max-width: 768px) 
     .navbar .navbar-nav .dropdown .dropdown-menu li > a 
         color: #333333 !important
