--- a/pdf_file/templates/pdf_file/view.html
+++ b/pdf_file/templates/pdf_file/view.html
@@ -18,8 +18,8 @@
 	{% breadcrumb subject.category 'subjects:cat_view'  subject.category.slug %}
 	{% breadcrumb subject 'subjects:view' subject.slug %}
 	{% breadcrumb pdf_file.topic 'subjects:topic_view' subject.slug pdf_file.topic.slug %}
-	{% breadcrumb pdf_file 'pdf_file:view' pdf_file.slug %}
-	
+	{% breadcrumb pdf_file 'pdf_files:view' pdf_file.slug %}
+
 {% endblock %}
 
 
@@ -52,6 +52,6 @@
     <p>{% trans "PDF could not be displayed" %}</p>
   </object>
 
-  
- 
+
+
 {% endblock content %}
